objects/Awards__c.object
<CustomObject>
    <description>Object to capture all prior awards</description>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <picklist>
            <picklistValues>
                <fullName>NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-NASA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_Date__c</fullName>
        <label>Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Award_ID__c</fullName>
        <description>EHB Award ID</description>
        <externalId>true</externalId>
        <label>Award ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <label>Award Type</label>
        <picklist>
            <picklistValues>
                <fullName>NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-NASA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive and awaiting closeout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Administration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Phase I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase II</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>SBIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STTR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Tite_del__c</fullName>
        <label>Proposal Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <externalId>true</externalId>
        <label>Proposal #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Award</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Firm__c</field>
                <operation>equals</operation>
                <valueField>Awards__c.Firm__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Awards__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Related_Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Center__c</fullName>
        <label>Responsible Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Solicitation</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technology_Area__c</fullName>
        <label>Technology Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Topic_Subtopic__c</fullName>
        <label>Topic/Subtopic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Award</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>